manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cncf-wasm-webinar
spec:
  selector:
    app: cncf-wasm-webinar
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
